# cliniq

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: BRIDGEFORM_PLAN.md  BRIDGEFORM_PRD.md  Health_Skill_Assessment.md  LESSONS_LEARNT.md  PRD.md
scripts/: local_test.py
src/cliniq/: __init__.py  cli.py
src/cliniq/adapters/: __init__.py  base.py  claude.py  ollama.py
src/cliniq/extraction/: __init__.py  engine.py
src/cliniq/ingestion/: __init__.py  ocr.py  pdf_reader.py  preprocessing.py
src/cliniq/mcp_server/: server.py
src/cliniq/output/: json_writer.py  markdown_writer.py
src/cliniq/schemas/: __init__.py  appointment.py  condition.py  contact.py  medical_note.py  medication.py  symptom.py
test_corpus/born_digital/ground_truth/: sample_01_outpatient_letter.json  sample_02_discharge_summary.json  sample_03_lab_report.json  sample_04_referral_letter.json  sample_05_clinic_letter.json
test_corpus/real_world/ground_truth/: allergy_isac_001_mock.json  ccl_mri_request_001_mock.json  health_records_compilation_001_mock.json  iofpm_consult_notes_001_mock.json  iofpm_healthcheck_001_mock.json  lister_referral_001_mock.json  london_clinic_invoice_001_mock.json  onewelbeck_ent_vestibular_001_mock.json  onewelbeck_invoice_001_mock.json
tests/: test_adapters.py  test_cli.py  test_engine.py  test_golden.py  test_ingestion.py  test_ingestion_unit.py  test_integration_claude.py  test_ocr.py  test_output.py  test_preprocessing.py  test_prompts.py  test_schemas.py
(+23 files in other folders)
